jena-shex/src/test/files/spec/negativeStructure/Cycle2Extra.shex
# Circular reference on EXTRA property :a.
PREFIX :       <http://example.org/>

:S EXTRA :a {
  :a @:S
}
